[package]
name = "caddy-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
crossbeam = "0.8.2"
lazy_static = "1.4.0"
notify = "6.1.0"
prometheus-client = "0.21.2"
regex = "1.9.3"
rocket = { version = "0.5.0-rc.3", features = ["tls"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
